--- a/src/styles.css
+++ b/src/styles.css
@@ -1,25 +1,43 @@
+/* styles.css */
 
-
-.container {
-    max-width: 400px;
-    margin: 0 auto;
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
+    background-color:#fefae0; /* Set the background color for the whole page */
+  }
+  
+  .container {
+    width: 400px; /* Adjust width as needed */
     padding: 20px;
-    background-color: #f8f9fa;
+    background-color:#faedcd;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   }
   
+  h2 {
+    font-size: 24px;
+    margin-bottom: 20px;
+    color: #333;
+  }
+  
+  .input-container {
+    display: flex;
+  }
+  
   input[type="text"] {
-    width: calc(100% - 70px);
+    flex: 1;
     padding: 10px;
-    margin-bottom: 10px;
-    border: 1px solid #ced4da;
+    margin-right: 10px;
+    border: 1px solid #e9edc9;
     border-radius: 4px;
   }
   
   button {
     padding: 10px 20px;
-    background-color: #007bff;
+    background-color:#d4a373;
     color: #fff;
     border: none;
     border-radius: 4px;
@@ -27,7 +45,7 @@
   }
   
   button:hover {
-    background-color: #0056b3;
+    background-color: #e9edc9;
   }
   
   ul {
@@ -37,6 +55,20 @@
   
   li {
     margin-bottom: 10px;
+    display: flex;
+    align-items: center;
   }
   
+  .task {
+    flex: 1;
+    margin-right: 10px;
+  }
+  
+  .remove-button {
+    background-color: #ccd5ae;
+  }
+  
+  .remove-button:hover {
+    background-color: #c82333;
+  }
   
